# Wikipedia-Donation-Destroyer

./: .gitignore  .swp  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  dd_common.js  dd_linuxfoundation.js  dd_mozilla.js  dd_wikipedia.js  manifest.firefox.json  manifest.json  styles.css  wdd_linuxfoundation.js  wdd_mozilla.js  wdd_wikipedia.js  wrapper.js
data/: wikipedia.js
wdd_common/: Cargo.toml
wdd_common/src/: lib.rs
wdd_linuxfoundation/: Cargo.toml
wdd_linuxfoundation/src/: lib.rs
wdd_mozilla/: Cargo.toml
wdd_mozilla/src/: lib.rs
wdd_wikipedia/: Cargo.toml
wdd_wikipedia/src/: lib.rs
